<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/iv_prepare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_quiz_apps"
        android:paddingTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_prepare"/>
    <TextView
        android:id="@+id/tv_prepare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/silahkan_masukkan_nama_anda"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/iv_prepare" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bt_start"
        android:layout_margin="20dp"
        android:hint="@string/field_your_nickname"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/bt_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:text="@string/start"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>